2009-03-23  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (enum): Added prefix TAG_ for compatibility on compilation.

        * test/input-output-port.scm (rm): Added rm procedure not using shell command.
                                     (cp): Rewrote cp procedure for Windows.

        * Bignum.h: Fixed __WORDSIZE.

        * scripts/gen-accessors.scm : Added.

        * Object-accessors.h : Added.

        * Now passes all of r6rs-test suite.

        * library.scm (string-titlecase): Fixed string-titlecase.

2009-03-22  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : transcoded-port closes the binary-input-port.

        * lib/mosh/ffi.ss (mosh): Export make-c-function

        * thread_local_alloc.c : applied http://osdir.com/ml/programming.garbage-collection.boehmgc/2008-05/msg00013.html.

2009-03-21  higepon  <higepon@users.sourceforge.jp>

        * ErrorProcedures.h : Renamed TRY -> TRY_WITHOUT_DSTR.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Show condition components when error occurs.

        * gc-7.1/configure.ac: Don't enable DONT_ADD_BYTE_AT_END and THREAD_LOCAL_ALLOC in same time.

2009-03-20  higepon  <higepon@users.sourceforge.jp>

        * test/io-error.scm : use (eq? (host-os) 'win32).

        * PortProcedures.cpp (scheme::closePortEx): Use argumentAsPort.

        * Bignum.h (scheme): Fixed toU32 and toS32.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/library-manager.ss : MOSH_GENSYM_PREFIX.

        * scanner.re (Scanner): Fixed the parse of bad string. (thanks to naoya_t)

2009-03-19  higepon  <higepon@users.sourceforge.jp>

        * Patch for build on Windows with VC++ by herumi.

2009-03-18  higepon  <higepon@users.sourceforge.jp>

        * Boehm GC 7.1alpha3 => 7.1

        * TranscodedTextualInputPort.cpp (TranscodedTextualInputPort::getLineNo): Fixed the bug of line number.
